Bug 467150. Don't clear textruns just because we destroy an empty nsContinuingTextFrame. r=smontagu